--- a/social-media-connect/package.json
+++ b/social-media-connect/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
-    "next": "14.2.11",
+    "next": "^14.2.12",
     "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
