--- a/social-media-connect/package.json
+++ b/social-media-connect/package.json
@@ -10,16 +10,27 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
-    "next": "^14.2.12",
+    "@stripe/stripe-js": "^4.5.0",
+    "axios": "^1.7.7",
+    "next": "^14.2.13",
+    "next-auth": "^4.24.7",
+    "openssl-nodejs": "^1.0.5",
     "prisma": "^5.19.1",
-    "react": "^18",
-    "react-dom": "^18"
+    "razorpay": "^2.9.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "recharts": "^2.12.7",
+    "stripe": "^16.12.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-icons": "^2.2.7",
+    "@types/stripe-v3": "^3.1.33",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
